Changes for 2.0.4rc1

New features:
..F....... [ZBX-5556] action recovery message body can now be empty (Vedmak)
A.F....... [ZBX-1357] updated Brazilian Portuguese, Czech, Hungarian, Italian, Polish, Slovak and Russian translations; thanks to Zabbix translators (Richlv)
A.F....... [ZBXNEXT-1426] added initial Persian translation (Richlv)
A.F....... [ZBXNEXT-1447] added initial Finnish translation (Richlv)
........S. [ZBX-5525] renamed macro {TRIGGER.COMMENT} to {TRIGGER.DESCRIPTION} (Sasha)

Bug fixes:
..F....... [ZBX-5280] fixed functional macros for newly created items returning 0 instead of 'no data' (Toms)
..F....... [ZBX-5280] fixed HOST.DNS macro priorities if only JMX and IPMI interfaces are used in host (Toms)
..F....... [ZBX-5280] fixed HOST.DNS macro did not used default DNS from host interface configuration (Toms)
..F....... [ZBX-5280] fixed in map labels not expanding positional macros like HOST.HOST1 for trigger items (Toms)
A......... [ZBX-4097] changed the "application", "host" and "group" parameters for item.get, trigger.get and triggerprototype.get to be case sensitive (Pavels)
A.F....... [ZBX-1946] fixed being able to create screen items with spans exceeding the size of the screen (Pavels)
A.F....... [ZBX-5619] Fixed errors when importing a template with an empty screen (Oleg)
..F....... [ZBX-3803] added session auto start check in frontend setup (Oleg)
..F....... [ZBX-5621] fixed custom trigger severities in user media configuration (Oleg)
..F....... [ZBX-5617] fixed class bug in triggers (Oleg)
A.F....... [ZBX-5046] fixed error message when delete globalmacro if macro doesn't exist (Oleg)
..F....... [ZBX-5595] Disabled "housekeeper" table updates when deleting a discovery rule or an item prototype (Oleg)
..F....... [ZBX-5596] Login form input field width fix (Oleg)
..F....... [ZBX-5629] fixed javascript error if user media contains doublequote (Oleg)
..F....... [ZBX-5580] fixed graphs grid for negative values (Oleg)